feat : 카테고리 공유하기 시, Controller 는 단일 도메인만 의존하도록 로직 수정